--- a/src/assets/sass/page-collection-lamonov.scss
+++ b/src/assets/sass/page-collection-lamonov.scss
@@ -10,7 +10,7 @@
   $self: &;
   @include fontMontserrat();
   color: #000;
-  background: #fff; // url("#{$images}/page-kraft/bg-page.jpg") no-repeat 50% 0;
+  background: #fff !important; // url("#{$images}/page-kraft/bg-page.jpg") no-repeat 50% 0;
   background-size: cover;
 
   .container {
