--- a/src/assets/sass/layouts/_auction.scss
+++ b/src/assets/sass/layouts/_auction.scss
@@ -102,6 +102,10 @@ body .container--new {
     img {
       float: left;
       margin: 0 10px 0 0;
+      border-radius: 100%;
+      width: 20px;height: 20px;
+      object-fit: cover;
+      
     }
   }
 
@@ -485,9 +489,11 @@ body .container--new {
     margin: 0 20px 0 0;
     border-radius: 100%;
     overflow: hidden;
+    position: relative;
 
     img {
-      width: 100%;
+      position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;
+      
     }
   }
 
